--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <div class="web-title">LUTONG BAHAY</div>
+        <div class="web-title">KUPAL LORDS</div>
         <div class="web-tagline">Your Guide to Authentic Filipino Recipes</div>
     </header>
 
